{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 806,
  "lineage": "98d92b37-31be-156a-27fb-a23134c59ac1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc1_to_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-095811e461ef300d13854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-095811e461ef300d1",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0db2c854bfb09d52c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc_peering_connection.vpc_peering",
            "module.EC2.aws_internet_gateway.main",
            "module.EC2.aws_route_table.public",
            "module.EC2.aws_vpc.main",
            "module.RDS.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc2_to_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].account2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c717cf05d11d88af179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c717cf05d11d88af",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0db2c854bfb09d52c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc_peering_connection.vpc_peering",
            "module.EC2.aws_vpc.main",
            "module.RDS.aws_route_table.vpc2_route_table",
            "module.RDS.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-0db2c854bfb09d52c",
            "peer_owner_id": "039612868338",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-09e64dec70bb678c3",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "VPC-Peering-Connection"
            },
            "tags_all": {
              "Name": "VPC-Peering-Connection"
            },
            "vpc_id": "vpc-0b73b707445f4f093"
          },
          "dependencies": [
            "module.EC2.aws_vpc.main",
            "module.RDS.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b64affdd5de5d46",
            "arn": "arn:aws:ec2:us-east-1:202533516001:instance/i-02962785ce7f76522",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "CrossAccountEC2InstanceProfile_account1",
            "id": "i-02962785ce7f76522",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "backend_server_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0785038cc61435080",
            "private_dns": "ip-10-0-1-234.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.234",
            "public_dns": "ec2-3-93-37-46.compute-1.amazonaws.com",
            "public_ip": "3.93.37.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00f31c4faf63fae84",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-022b7844f0de854ad",
            "tags": {
              "Name": "Backed_End_Server"
            },
            "tags_all": {
              "Name": "Backed_End_Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02479136f993fcc52"
            ]
          },
          "dependencies": [
            "module.EC2.aws_iam_instance_profile.ec2_instance_profile_account1",
            "module.EC2.aws_iam_role.cross_account_ec2_role_account1",
            "module.EC2.aws_key_pair.backend_server_key",
            "module.EC2.aws_security_group.backed_server_sg",
            "module.EC2.aws_subnet.public",
            "module.EC2.aws_vpc.main",
            "module.EC2.tls_private_key.ssh_local"
          ]
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533516001:internet-gateway/igw-014c91a50cbe6e036",
            "id": "igw-014c91a50cbe6e036",
            "owner_id": "202533516001",
            "tags": {
              "Name": "Back_End_Vpc-igw"
            },
            "tags_all": {
              "Name": "Back_End_Vpc-igw"
            },
            "vpc_id": "vpc-0b73b707445f4f093"
          },
          "dependencies": [
            "module.EC2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533516001:route-table/rtb-095811e461ef300d1",
            "id": "rtb-095811e461ef300d1",
            "owner_id": "202533516001",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-014c91a50cbe6e036",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "Back_End_Vpc-public-rt"
            },
            "tags_all": {
              "Name": "Back_End_Vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b73b707445f4f093"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EC2.aws_internet_gateway.main",
            "module.EC2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045a5dc1ad3ca1a08",
            "route_table_id": "rtb-095811e461ef300d1",
            "subnet_id": "subnet-022b7844f0de854ad"
          },
          "dependencies": [
            "module.EC2.aws_internet_gateway.main",
            "module.EC2.aws_route_table.public",
            "module.EC2.aws_subnet.public",
            "module.EC2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backed_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533516001:security-group/sg-02479136f993fcc52",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02479136f993fcc52",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1194,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 1194
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "Allow HTTP",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Backend_Server_SG",
            "name_prefix": "",
            "owner_id": "202533516001",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b73b707445f4f093"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EC2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533516001:subnet/subnet-022b7844f0de854ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022b7844f0de854ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202533516001",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Backed_End_Server_Subnet"
            },
            "tags_all": {
              "Name": "Backed_End_Server_Subnet"
            },
            "vpc_id": "vpc-0b73b707445f4f093"
          },
          "dependencies": [
            "module.EC2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].default",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533516001:vpc/vpc-0b73b707445f4f093",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c77bbdd7dd3c72af",
            "default_route_table_id": "rtb-0ce604b7e7c671026",
            "default_security_group_id": "sg-06fae4700e406ce57",
            "dhcp_options_id": "dopt-0230fedc105081ee8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b73b707445f4f093",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ce604b7e7c671026",
            "owner_id": "202533516001",
            "tags": {
              "Name": "Back_End_Vpc"
            },
            "tags_all": {
              "Name": "Back_End_Vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.RDS",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc2_route_table",
      "provider": "module.RDS.provider[\"registry.terraform.io/hashicorp/aws\"].account2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:039612868338:route-table/rtb-0c717cf05d11d88af",
            "id": "rtb-0c717cf05d11d88af",
            "owner_id": "039612868338",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0db2c854bfb09d52c"
              }
            ],
            "tags": {
              "Name": "VPC1 Route Table"
            },
            "tags_all": {
              "Name": "VPC1 Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e64dec70bb678c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.RDS.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.RDS",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet1_association",
      "provider": "module.RDS.provider[\"registry.terraform.io/hashicorp/aws\"].account2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ad021eef1b86b48",
            "route_table_id": "rtb-0c717cf05d11d88af",
            "subnet_id": "subnet-07c8c065758231676"
          },
          "dependencies": [
            "module.RDS.aws_route_table.vpc2_route_table",
            "module.RDS.aws_subnet.private_subnet_1",
            "module.RDS.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.RDS",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet2_association",
      "provider": "module.RDS.provider[\"registry.terraform.io/hashicorp/aws\"].account2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a093e542524bc9ba",
            "route_table_id": "rtb-0c717cf05d11d88af",
            "subnet_id": "subnet-04246ac280369291d"
          },
          "dependencies": [
            "module.RDS.aws_route_table.vpc2_route_table",
            "module.RDS.aws_subnet.private_subnet_2",
            "module.RDS.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.RDS",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "module.RDS.provider[\"registry.terraform.io/hashicorp/aws\"].account2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:039612868338:security-group/sg-0936162a667b77e57",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0936162a667b77e57",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow MySQL Access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20241205103357451000000002",
            "name_prefix": "terraform-",
            "owner_id": "039612868338",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS Security Group"
            },
            "tags_all": {
              "Name": "RDS Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e64dec70bb678c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.RDS.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.RDS",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "module.RDS.provider[\"registry.terraform.io/hashicorp/aws\"].account2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:039612868338:subnet/subnet-07c8c065758231676",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c8c065758231676",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "039612868338",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-09e64dec70bb678c3"
          },
          "dependencies": [
            "module.RDS.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.RDS",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "module.RDS.provider[\"registry.terraform.io/hashicorp/aws\"].account2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:039612868338:subnet/subnet-04246ac280369291d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04246ac280369291d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "039612868338",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-09e64dec70bb678c3"
          },
          "dependencies": [
            "module.RDS.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.RDS",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "module.RDS.provider[\"registry.terraform.io/hashicorp/aws\"].account2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:039612868338:vpc/vpc-09e64dec70bb678c3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0746ac3e68a17c738",
            "default_route_table_id": "rtb-071e297ea70a64302",
            "default_security_group_id": "sg-0301fd89c496d3c8c",
            "dhcp_options_id": "dopt-003697a8de0cc8028",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09e64dec70bb678c3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-071e297ea70a64302",
            "owner_id": "039612868338",
            "tags": {
              "Name": "MyVPC"
            },
            "tags_all": {
              "Name": "MyVPC"
            }
          }
        }
      ]
    }
  ]
}